force-app/main/default/objects/Account__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>