force-app/main/default/objects/Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Shop</fullName>
                <label>Platinum</label>
            </value>
            <value>
                <fullName>Business</fullName>
                <label>Silver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>