force-app/main/default/objects/Account__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>AccountNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>