force-app/main/default/objects/Account__c/fields/AccountSource__c.field-meta.xml
<CustomField>
    <fullName>AccountSource__c</fullName>
    <label>AccountSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>