force-app/main/default/objects/Account__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>