force-app/main/default/objects/Account__c/fields/Agreement_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Validity_Date__c</fullName>
    <label>Agreement Validity Date</label>
    <type>Date</type>
</CustomField>