force-app/main/default/objects/Account__c/fields/Agreement_Verified__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Verified?</label>
    <type>Checkbox</type>
</CustomField>