force-app/main/default/objects/Account__c/fields/Already_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Already_in_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already in Contract</label>
    <type>Checkbox</type>
</CustomField>