force-app/main/default/objects/Account__c/fields/AMC_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AMC_TYPE__c</fullName>
    <label>AMC TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Comprehencive</fullName>
            </value>
            <value>
                <fullName>Non comprehencive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>