force-app/main/default/objects/Account__c/fields/Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_User__c</fullName>
    <label>Assigned To User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>