force-app/main/default/objects/Account__c/fields/Automative__c.field-meta.xml
<CustomField>
    <fullName>Automative__c</fullName>
    <label>Automative Sales Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>