force-app/main/default/objects/Account__c/fields/Automative_LTR_Acheived__c.field-meta.xml
<CustomField>
    <fullName>Automative_LTR_Acheived__c</fullName>
    <label>Automative Sales Acheived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>