force-app/main/default/objects/Account__c/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <label>Billing State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>