force-app/main/default/objects/Account__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>BillingAddress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>