force-app/main/default/objects/Account__c/fields/Business_Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Bank_Details__c</fullName>
    <label>Business Bank Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>