force-app/main/default/objects/Account__c/fields/Cooler_Avaliable__c.field-meta.xml
<CustomField>
    <fullName>Cooler_Avaliable__c</fullName>
    <label>Cooler Avaliable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>