force-app/main/default/objects/Account__c/fields/Decorative_LTR_Acheived__c.field-meta.xml
<CustomField>
    <fullName>Decorative_LTR_Acheived__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mattresses Sales  Acheived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>