force-app/main/default/objects/Account__c/fields/Decorative_LTR_Planned__c.field-meta.xml
<CustomField>
    <fullName>Decorative_LTR_Planned__c</fullName>
    <label>Mattresses Sales Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>