force-app/main/default/objects/Account__c/fields/Decorative_Sales_Acheived__c.field-meta.xml
<CustomField>
    <fullName>Decorative_Sales_Acheived__c</fullName>
    <label>Decorative Sales Acheived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>