force-app/main/default/objects/Account__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Vehicle Classification</fullName>
            </value>
            <value>
                <fullName>RFID based Access Control</fullName>
            </value>
            <value>
                <fullName>HTMS Control Centre</fullName>
            </value>
            <value>
                <fullName>Emergency Call Boxes</fullName>
            </value>
            <value>
                <fullName>AVCS</fullName>
            </value>
            <value>
                <fullName>Mode</fullName>
            </value>
            <value>
                <fullName>Lanes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>