force-app/main/default/objects/Account__c/fields/Existing_Tie_Ups_Competition__c.field-meta.xml
<CustomField>
    <fullName>Existing_Tie_Ups_Competition__c</fullName>
    <label>Existing Tie Ups/ Competition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>