force-app/main/default/objects/Account__c/fields/GST_Verified__c.field-meta.xml
<CustomField>
    <fullName>GST_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Verified?</label>
    <type>Checkbox</type>
</CustomField>