force-app/main/default/objects/Account__c/fields/Industrial_KGS_planned__c.field-meta.xml
<CustomField>
    <fullName>Industrial_KGS_planned__c</fullName>
    <label>Beds Sale Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>