force-app/main/default/objects/Account__c/fields/Industrial_Sales_Acheived__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Sales_Acheived__c</fullName>
    <label>Pillows Sales Acheived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>