force-app/main/default/objects/Account__c/fields/Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infrastructure</label>
    <type>Checkbox</type>
</CustomField>