force-app/main/default/objects/Account__c/fields/Infrastructure_Details__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Details__c</fullName>
    <label>Infrastructure Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>