force-app/main/default/objects/Account__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to explore</fullName>
            </value>
            <value>
                <fullName>Actively looking</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>