force-app/main/default/objects/Account__c/fields/IsCustomerPortal__c.field-meta.xml
<CustomField>
    <fullName>IsCustomerPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustomerPortal</label>
    <type>Checkbox</type>
</CustomField>