force-app/main/default/objects/Account__c/fields/Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date__c</fullName>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>