force-app/main/default/objects/Account__c/fields/Orders_Acheived__c.field-meta.xml
<CustomField>
    <fullName>Orders_Acheived__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders Acheived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>