force-app/main/default/objects/Account__c/fields/Orders_Planned__c.field-meta.xml
<CustomField>
    <fullName>Orders_Planned__c</fullName>
    <label>Orders Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>