force-app/main/default/objects/Account__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>IMAGE(&apos;https://image.shutterstock.com/image-vector/fivestar-rating-icon-4-260nw-729509077.jpg&apos;, &apos;&apos;, 20,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>