force-app/main/default/objects/Account__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tamilnadu</fullName>
                <label>TAMILNADU</label>
            </value>
            <value>
                <fullName>GUJRATH</fullName>
            </value>
            <value>
                <fullName>MADHYA PRADESH</fullName>
            </value>
            <value>
                <fullName>MAHARASHTRA</fullName>
            </value>
            <value>
                <fullName>ANDHRA PRADESH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>