force-app/main/default/objects/Account__c/fields/Sales_Acheived__c.field-meta.xml
<CustomField>
    <fullName>Sales_Acheived__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Yearly Sales Acheived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>