force-app/main/default/objects/Account__c/fields/Sales_Planned__c.field-meta.xml
<CustomField>
    <fullName>Sales_Planned__c</fullName>
    <label>Yearly Sales Commited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>