force-app/main/default/objects/Account__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>ShippingAddress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>