force-app/main/default/objects/Account__c/fields/Store_Category__c.field-meta.xml
<CustomField>
    <fullName>Store_Category__c</fullName>
    <label>Store Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer/Retailer/MBO</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>My Sleep Store</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Distributor Exclusive</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>