force-app/main/default/objects/Account__c/fields/Store_Owner__c.field-meta.xml
<CustomField>
    <fullName>Store_Owner__c</fullName>
    <label>Store Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>