force-app/main/default/objects/Account__c/fields/Streangth__c.field-meta.xml
<CustomField>
    <fullName>Streangth__c</fullName>
    <label>Streangth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>