force-app/main/default/objects/Account__c/fields/Syllabus__c.field-meta.xml
<CustomField>
    <fullName>Syllabus__c</fullName>
    <label>Syllabus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBSE</fullName>
            </value>
            <value>
                <fullName>NCERT</fullName>
            </value>
            <value>
                <fullName>ICS</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>