force-app/main/default/objects/Account__c/fields/Visit_Frequncy__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequncy__c</fullName>
    <label>Visit Frequncy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>