force-app/main/default/objects/Account__c/fields/Weekly_Off__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Off__c</fullName>
    <label>Weekly Off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>