force-app/main/default/objects/Account__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <label>Working Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>