force-app/main/default/objects/Account__c/fields/xx__c.field-meta.xml
<CustomField>
    <fullName>xx__c</fullName>
    <label>XX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>