force-app/main/default/objects/Account__c/fields/YearStarted__c.field-meta.xml
<CustomField>
    <fullName>YearStarted__c</fullName>
    <label>YearStarted</label>
    <length>10</length>
    <type>Text</type>
</CustomField>