force-app/main/default/objects/Account__c/validationRules/Take_infrastructure_details.validationRule-meta.xml
<ValidationRule>
    <fullName>Take_infrastructure_details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Infrastructure_Details__c ),  Infrastructure__c  =true)</errorConditionFormula>
    <errorMessage>Please enter Infrastructure details</errorMessage>
</ValidationRule>